# surgical-deterioration-env

./: .gitignore  Dockerfile  README.md  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  simulation.py
server/: app.py  requirements.txt
