[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "surgical-deterioration-env"
version = "1.0.0"
description = "Post-surgical deterioration early warning environment for OpenEnv"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "openai==1.51.0",
    "requests==2.32.3",
    "numpy==1.26.4",
    "python-dotenv==1.0.1",
    "openenv>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/SampathA/surgical-deterioration-env"
Repository = "https://github.com/phantostick/surgical-deterioration-env"

[tool.openenv]
name = "surgical-deterioration-env"
version = "1.0.0"
entry_point = "server.app:app"